{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 181,
  "lineage": "5e8c630a-8e9d-bff8-2567-4a10163875d5",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:716290576003:network-acl/acl-0daa6df33ec41a694",
            "default_network_acl_id": "acl-0daa6df33ec41a694",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0daa6df33ec41a694",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "716290576003",
            "subnet_ids": [
              "subnet-02e85cbf4da7e4f4a",
              "subnet-0ac6276dd690410f4"
            ],
            "tags": {
              "Name": "resume-vpc-default",
              "Project": "cloud-resume"
            },
            "tags_all": {
              "Name": "resume-vpc-default",
              "Project": "cloud-resume"
            },
            "vpc_id": "vpc-01690d7791a03e888"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:716290576003:route-table/rtb-0f0b9215a444e0d3b",
            "default_route_table_id": "rtb-0f0b9215a444e0d3b",
            "id": "rtb-0f0b9215a444e0d3b",
            "owner_id": "716290576003",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "resume-vpc-default",
              "Project": "cloud-resume"
            },
            "tags_all": {
              "Name": "resume-vpc-default",
              "Project": "cloud-resume"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01690d7791a03e888"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:716290576003:security-group/sg-0c0955045e416793a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c0955045e416793a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "716290576003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "resume-vpc-default",
              "Project": "cloud-resume"
            },
            "tags_all": {
              "Name": "resume-vpc-default",
              "Project": "cloud-resume"
            },
            "vpc_id": "vpc-01690d7791a03e888"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:716290576003:internet-gateway/igw-012abe83b9adad0ae",
            "id": "igw-012abe83b9adad0ae",
            "owner_id": "716290576003",
            "tags": {
              "Name": "resume-vpc",
              "Project": "cloud-resume"
            },
            "tags_all": {
              "Name": "resume-vpc",
              "Project": "cloud-resume"
            },
            "vpc_id": "vpc-01690d7791a03e888"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-012abe83b9adad0ae",
            "id": "r-rtb-002f84f7b4b3be75c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002f84f7b4b3be75c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:716290576003:route-table/rtb-002f84f7b4b3be75c",
            "id": "rtb-002f84f7b4b3be75c",
            "owner_id": "716290576003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012abe83b9adad0ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "resume-vpc-public",
              "Project": "cloud-resume"
            },
            "tags_all": {
              "Name": "resume-vpc-public",
              "Project": "cloud-resume"
            },
            "timeouts": null,
            "vpc_id": "vpc-01690d7791a03e888"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d776db78c6c6004a",
            "route_table_id": "rtb-002f84f7b4b3be75c",
            "subnet_id": "subnet-0ac6276dd690410f4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9a20d3cf077d5eb",
            "route_table_id": "rtb-002f84f7b4b3be75c",
            "subnet_id": "subnet-02e85cbf4da7e4f4a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:716290576003:subnet/subnet-0ac6276dd690410f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac6276dd690410f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "716290576003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resume-vpc-public-eu-central-1a",
              "Project": "cloud-resume",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "resume-vpc-public-eu-central-1a",
              "Project": "cloud-resume",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01690d7791a03e888"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:716290576003:subnet/subnet-02e85cbf4da7e4f4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e85cbf4da7e4f4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "716290576003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resume-vpc-public-eu-central-1b",
              "Project": "cloud-resume",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "resume-vpc-public-eu-central-1b",
              "Project": "cloud-resume",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01690d7791a03e888"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:716290576003:vpc/vpc-01690d7791a03e888",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0daa6df33ec41a694",
            "default_route_table_id": "rtb-0f0b9215a444e0d3b",
            "default_security_group_id": "sg-0c0955045e416793a",
            "dhcp_options_id": "dopt-042b22261b18d11af",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01690d7791a03e888",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f0b9215a444e0d3b",
            "owner_id": "716290576003",
            "tags": {
              "Name": "resume-vpc",
              "Project": "cloud-resume"
            },
            "tags_all": {
              "Name": "resume-vpc",
              "Project": "cloud-resume"
            }
          }
        }
      ]
    }
  ]
}